# semantic-search-real-state

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  audit_cleaning_report.csv  check_models.py  debug_csv.py  debug_csv_parsing.py  debug_payload.py  debug_qdrant.py  demo_search.py  docker-compose.yml  lyon_balmaceda_scraper_summary.csv  lyon_balmaceda_scraper_summary.xlsx  package-lock.json  pyproject.toml  requirements.md  requirements.txt  test_cleaning.py  test_cleaning_issue.py  test_semantic_search.py  ~$lyon_balmaceda_scraper_summary.xlsx
config/: __init__.py  settings.py
docs/: CONTEXTO_Y_COMPLEJIDADES.md  SETUP.md  analisis_csv_lyon_balmaceda.md
scripts/: audit_string_cleaning.py  chat_search_frontend.py  check_property_by_url.py  clean_vector_db.py  semantic_search.py
src/: __init__.py
src/db/: __init__.py  client.py
src/etl/: __init__.py  cleaner.py  loader.py  main.py
src/services/: __init__.py  embedder.py
