[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search-etl"
version = "0.1.0"
description = "High-performance ETL pipeline for real estate semantic search"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.6.0",
    "fastembed>=0.2.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "unidecode>=1.3.6",
    "regex>=2023.8.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true